<resources>

    <string name="accept_profile_editon_button_text" translatable="false">LISTO</string>
    <string name="app_logo_description_text">application logo</string>
    <string name="app_name">RankCity</string>
    <string name="cancel_profile_editon_button_text" translatable="false">Cancelar</string>
    <string name="endRoute">¡BUEN TRABAJO!</string>
    <string name="dateItem">Fecha</string>
    <string-array name="dates_array">
        <item>01-01-2021</item>
        <item>02-01-2021</item>
        <item>03-01-2021</item>
        <item>04-01-2021</item>
        <item>05-01-2021</item>
        <item>06-01-2021</item>
        <item>07-01-2021</item>
        <item>08-01-2021</item>
        <item>09-01-2021</item>
        <item>10-01-2021</item>
        <item>11-01-2021</item>
        <item>12-01-2021</item>
        <item>13-01-2021</item>
    </string-array>
    <string name="hometown_input_placeholder" translatable="false">Tu ciudad ...</string>
    <string name="edit_nick_input_placeholder" translatable="false">Tu seudónimo ...</string>
    <string name="login_button_text">ENTRAR</string>
    <string name="main_menu">Menú principal</string>
    <string name="password_input_placeholder">Contraseña</string>
    <string name="pause_button">Botón de pausa</string>
    <string name="periodoButton">Periodo</string>
    <string name="prefs_file">com.apm2021.rankcity.PREFERENCE_FILE_KEY</string>
    <string name="profileRoutesName">Rutas</string>
    <string name="register_button_text">REGISTRARSE</string>
    <string name="scoreInfoFragment">Puntuación</string>
    <string name="scoreMapFragment">Puntos</string>
    <string name="share_menu">Menu de compartir</string>
    <string name="start_button_text">A CAMINAR</string>
    <string name="startButtonName">Iniciar ruta</string>
    <string name="timeInfoFragment">Tiempo</string>
    <string name="timeMapFragment">Tiempo</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_home">Inicio</string>
    <string name="title_leaderboard">Ranking</string>
    <string name="title_profile">Perfil</string>
    <string name="to_configuration_button">CONFIGURACION</string>
    <string name="to_google_login_button_text">ENTRAR CON GOOGLE</string>
    <string name="to_leaderboards_button">LEADERBOARDS</string>
    <string name="to_profile_button">MI PERFIL</string>
    <string name="userNameItem">Usuario</string>
    <string-array name="users_array">
        <item>Lily</item>
        <item>Poppy</item>
        <item>Sunflower</item>
        <item>Freesia</item>
        <item>Daisy</item>
        <item>Rose</item>
        <item>Daffodil</item>
        <item>Lavender</item>
        <item>Peony</item>
        <item>Lilac</item>
        <item>Dahlia</item>
        <item>Tulip</item>
        <item>Dandelion</item>
    </string-array>
    <string name="user_avatar_description_text">El avatar del usuario</string>
    <string name="user_email_input_placeholder">Email</string>
    <string name="user_name_input_placeholder">Nombre de usuario</string>
    <string name="card_user_score">3219231</string>
    <string name="welcomeText">¡Bienvenido!</string>
    <string name="welcome_image">Imagen de bienvenida</string>
    <string name="stopButtonName">Finalizar ruta</string>
    <string name="acceptEULA">Aceptar</string>
    <string name="cancelEULA">Cancelar</string>
    <string name="card_user_nameroute">HolaQUetalMisamigos</string>
    <string name="card_user_date">20/10/2020</string>
    <string name="icon_route">Icon Route</string>
    <string name="header_name_route">Ruta</string>
    <string name="header_date">Fecha</string>
    <string name="header_score">Puntos</string>
    <string name="header_name_user">Usuario</string>
    <string name="header_leaderboard">Ranking Global</string>
</resources>