<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/WellDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/endRoute"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteY="152dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/routeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Nombre de ruta"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WellDone" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:text="@string/scoreInfoFragment"
        android:textSize="@dimen/info_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/punctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="1500"
        android:textSize="@dimen/info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/timeInfoFragment"
        android:textSize="@dimen/info_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeName" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:text="30:15"
        android:textSize="@dimen/info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/routeName" />

    <Button
            android:id="@+id/buttonShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            app:backgroundTint="@color/button_primary"
            app:cornerRadius="1000dp"
            app:icon="@android:drawable/ic_menu_share"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="60sp"
            app:iconTint="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonBackHome"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonBackHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            app:backgroundTint="@color/button_primary"
            app:cornerRadius="1000dp"
            app:icon="@drawable/ic_home"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="60sp"
            app:iconTint="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonShare" />

</androidx.constraintlayout.widget.ConstraintLayout>